including cephes code does not work correctly.

--- a/test/compare_impedance.ipynb
+++ b/test/compare_impedance.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4  10.0  7.241407  83.596881  38.476267"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -231,14 +231,14 @@
        "4  10.0  7.247278  84.444758  38.563325"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load Python implementation data\n",
-    "py_data = pd.read_csv('../sample/test_pycalcimp.imp')\n",
+    "py_data = pd.read_csv('test_pycalcimp.imp')\n",
     "print(\"Python data shape:\", py_data.shape)\n",
     "print(\"\\nPython data columns:\", py_data.columns.tolist())\n",
     "print(\"\\nFirst few rows:\")\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
     "ax.set_xlim(0, 2000)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('impedance_comparison_full.png', dpi=150, bbox_inches='tight')\n",
+    "# plt.savefig('impedance_comparison_full.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(f\"Plot saved as: impedance_comparison_full.png\")"
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
     "ax.grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('impedance_comparison_peak.png', dpi=150, bbox_inches='tight')\n",
+    "# plt.savefig('impedance_comparison_peak.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(f\"Plot saved as: impedance_comparison_peak.png\")"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
     "         fontsize=10, fontfamily='monospace')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('impedance_difference.png', dpi=150, bbox_inches='tight')\n",
+    "# plt.savefig('impedance_difference.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(f\"Plot saved as: impedance_difference.png\")"
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
     "\n",
     "fig.suptitle('Comprehensive Impedance Comparison', fontsize=16, fontweight='bold', y=0.995)\n",
     "\n",
-    "plt.savefig('impedance_comprehensive.png', dpi=150, bbox_inches='tight')\n",
+    "# plt.savefig('impedance_comprehensive.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
     "print(f\"Plot saved as: impedance_comprehensive.png\")"
